# gbacpp

./: .gitignore  CMakeLists.txt  LICENSE  MMSYN_results.R  README.md  clean_folders.sh  compile_results.py  compute_gradient_ascent.sh  download_from_HPC.sh  install.sh  optimum_results.R  plot_trajectory.R  plot_trends.R  run_GBAcpp_jobs.py  run_all.sh  upload_to_HPC.sh
.github/workflows/: cmake-multi-platform.yml
cgm_format_tutorial/: README.md
cmake/: make.sh  make_clean.sh  make_debug.sh
cmake/modules/: Config.h.in
csv_models/A/: Info.csv  kcat.csv
csv_models/B/: kcat.csv
csv_models/C/: Info.csv  KM_forward.csv  M.csv  kcat.csv
csv_models/D/: Info.csv  M.csv  conditions.csv  direction.csv  kcat.csv
csv_models/EC12b/: conditions.csv
csv_models/FCR_EFM2/: kcat.csv
csv_models/MMSYN/: KM_backward.csv  KM_forward.csv  M.csv  conditions.csv  directions.csv  f0.csv  kcat.csv
csv_models/MMSYN_0000/: KM_forward.csv  conditions.csv  directions.csv  kcat.csv
csv_models/MMSYN_0000/MMSYN_0000/: M.csv  kcat.csv
csv_models/MMSYN_0010/: f0.csv  kcat.csv
csv_models/MMSYN_0010/MMSYN_0010/: KM_backward.csv  kcat.csv
csv_models/MMSYN_0100/: kcat.csv
csv_models/MMSYN_0100/MMSYN_0100/: kcat.csv
csv_models/MMSYN_0110/: KA.csv
csv_models/MMSYN_0110/MMSYN_0110/: kcat.csv
csv_models/MMSYN_1000/: M.csv  f0.csv  kcat.csv
csv_models/MMSYN_1000/MMSYN_1000/: kcat.csv
csv_models/MMSYN_1001/MMSYN_1001/: kcat.csv
csv_models/MMSYN_1010/: kcat.csv
csv_models/MMSYN_1011/: directions.csv  kcat.csv
csv_models/MMSYN_1011/MMSYN_1011/: f0.csv  kcat.csv
csv_models/MMSYN_1100/: conditions.csv
csv_models/MMSYN_1100/MMSYN_1100/: KM_forward.csv  kcat.csv
csv_models/MMSYN_1101/MMSYN_1101/: KM_backward.csv  kcat.csv
csv_models/MMSYN_1110/: KA.csv
csv_models/MMSYN_1110/MMSYN_1110/: kcat.csv
csv_models/MMSYN_1111/MMSYN_1111/: kcat.csv
csv_models/MMSYN_FCR_noRNA/: KM_backward.csv  KM_forward.csv  M.csv  f0.csv  kcat.csv
csv_models/MMSYN_FCR_noRNA_byproducts/: KM_backward.csv  M.csv  directions.csv  f0.csv  kcat.csv
csv_models/MMSYN_FCR_noRNA_noDNA_nodUTPase/: KM_backward.csv  KM_forward.csv  M.csv  conditions.csv  directions.csv  f0.csv  kcat.csv
csv_models/MMSYN_FCR_noRNA_noDNA_nodUTPase_byproducts/: KM_backward.csv  KM_forward.csv  M.csv  directions.csv  f0.csv  kcat.csv
csv_models/mmsyn_test/: KA.csv  KM_backward.csv  KM_forward.csv  M.csv  blocked.csv  conditions.csv  directions.csv  f0.csv  kcat.csv
doc/logo/: logo.pptx
examples/: model_A_condition_1.sh  model_B_all_conditions.sh  run_all_models.sh
examples/models/C/: f0.csv
examples/models/D/: KM.csv  f0.csv
hpc_scripts/: print_stastistics.py
scripts/: compile_HPC_results.py  connect_to_HPC.sh  download_from_HPC.sh  plot_optimized_model.R  plot_output.R  protemics_analysis.R  run_GBAcpp_jobs.py  upload_to_HPC.sh
src/: MMSYN_tests.cpp  calculate_gradient_ascent_trajectory.cpp  calculate_local_optimum.cpp  compute_gradient_ascent.cpp  compute_local_optimums.cpp  compute_optimum.cpp  compute_random_solutions.cpp  find_cgm_optimum.cpp  find_model_optimum.cpp  find_optimum.cpp
src/lib/: Enums.hpp  Macros.hpp  Model.cpp  Model.hpp  Structs.hpp
tutorials/: cgm_format_tutorial.md  src_model_format_tutorial.md  units_conversion_tutorial.ipynb
tutorials/cgm_format_tutorial/: README.md
tutorials/units_conversion_tutorial/: README.md
xcode/GBA_Evolution/GBA_Evolution.xcodeproj/: project.pbxproj
xcode/GBA_Evolution/GBA_Evolution.xcodeproj/project.xcworkspace/xcuserdata/charlesrocabert.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/GBA_Evolution/GBA_Evolution.xcodeproj/xcshareddata/xcschemes/: calculate_gradient_ascent_trajectory.xcscheme
xcode/GBA_Evolution/GBA_Evolution.xcodeproj/xcuserdata/charlesrocabert.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xcode/GBA_Evolution/GBA_Evolution.xcodeproj/xcuserdata/charlesrocabert.xcuserdatad/xcschemes/: xcschememanagement.plist
xcode/GBA_Evolution_2/GBA_Evolution_2.xcodeproj/: project.pbxproj
xcode/GBA_Evolution_2/GBA_Evolution_2.xcodeproj/project.xcworkspace/xcuserdata/charlesrocabert.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/GBA_Evolution_2/GBA_Evolution_2.xcodeproj/xcshareddata/xcschemes/: MMSYN_tests.xcscheme  calculate_gradient_ascent_trajectory.xcscheme  calculate_local_optimum.xcscheme  compute_gradient_ascent.xcscheme  compute_local_optimums.xcscheme  compute_random_solutions.xcscheme
xcode/GBA_Evolution_2/GBA_Evolution_2.xcodeproj/xcuserdata/charlesrocabert.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xcode/GBA_Evolution_2/GBA_Evolution_2.xcodeproj/xcuserdata/charlesrocabert.xcuserdatad/xcschemes/: xcschememanagement.plist
xcode/GBAcpp/GBAcpp.xcodeproj/: project.pbxproj
xcode/GBAcpp/GBAcpp.xcodeproj/project.xcworkspace/xcuserdata/charlesrocabert.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/GBAcpp/GBAcpp.xcodeproj/xcshareddata/xcschemes/: compute_gradient_ascent.xcscheme
xcode/GBAcpp/GBAcpp.xcodeproj/xcuserdata/charlesrocabert.xcuserdatad/xcschemes/: xcschememanagement.plist
